add model and controller

--- a/NekoJourney/appsettings.json
+++ b/NekoJourney/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=Neko;Trusted_Connection=True"
+  }
 }
